--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.12.0
 aniso8601==9.0.1
 blinker==1.6.2
 certifi==2023.7.22
@@ -6,6 +7,7 @@ charset-normalizer==3.2.0
 click==8.1.7
 cryptography==41.0.4
 flask==2.3.3
+Flask-Migrate==4.0.5
 flask-sqlalchemy==3.1.1
 greenlet==2.0.2
 idna==3.4
@@ -13,6 +15,7 @@ importlib-metadata==6.8.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 jwt==1.3.1
+Mako==1.2.4
 MarkupSafe==2.1.3
 psycopg2==2.9.7
 psycopg2-binary==2.9.7
