--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cffi==1.15.1
 charset-normalizer==3.2.0
 click==8.1.7
 cryptography==41.0.4
+dnspython==2.4.2
 flask==2.3.3
 Flask-Migrate==4.0.5
 flask-sqlalchemy==3.1.1
@@ -20,10 +21,10 @@ MarkupSafe==2.1.3
 psycopg2==2.9.7
 psycopg2-binary==2.9.7
 pycparser==2.21
+pymongo==4.5.0
 pytz==2023.3.post1
 requests==2.31.0
 six==1.16.0
-SQLAlchemy==2.0.21
 typing-extensions==4.8.0
 urllib3==2.0.5
 werkzeug==2.3.7
