--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 alembic==1.12.0
 aniso8601==9.0.1
 blinker==1.6.2
+bson==0.5.10
 certifi==2023.7.22
 cffi==1.15.1
 charset-normalizer==3.2.0
@@ -9,6 +10,7 @@ cryptography==41.0.4
 dnspython==2.4.2
 flask==2.3.3
 Flask-Migrate==4.0.5
+Flask-PyMongo==2.3.0
 flask-sqlalchemy==3.1.1
 greenlet==2.0.2
 idna==3.4
@@ -22,6 +24,7 @@ psycopg2==2.9.7
 psycopg2-binary==2.9.7
 pycparser==2.21
 pymongo==4.5.0
+python-dateutil==2.8.2
 pytz==2023.3.post1
 requests==2.31.0
 six==1.16.0
